e2e/test/modules/lb-consistent-hash-sourceip/mockserver-v2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mockserver-v2
  group: lb-consistent-hash-sourceip
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: mockserver
      version: v2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mockserver
        version: v2
    spec:
      containers:
      - args:
        - mock
        - -h
        - 0.0.0.0
        - -p
        - "80"
        - /etc/prism/mock-v2.yaml
        image: hub.ecns.io/library/prism:4
        imagePullPolicy: IfNotPresent
        name: mockserver
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/prism
          name: config
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          defaultMode: 420
          name: prism-conf
        name: config
