e2e/test/modules/lb-consistent-hash-sourceip/mockserver-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: mockserver
spec:
  host: mockserver
  subsets:
  - labels:
      app: mockserver
      version: v1
    name: v1
  - labels:
      app: mockserver
      version: v2
    name: v2
  trafficPolicy:
    loadBalancer:
      consistentHash:
        useSourceIp: true
